# vpr-omega-zero

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compare.sh  compile_flags.txt  docker-build.sh  docker-start.sh  makefile  makefile.bak
.github/workflows/: build.yml
Docs/: TODO.md
Includes/: Elf.hpp  ElfTypes.hpp  Elftypes.hpp  Filetypes.hpp  PE32Types.hpp  Parser.hpp  Pe32.hpp  Pe32types.hpp
Source/: Main.cpp  Util.cpp
Sources/: Elf.cpp  ElfTypes.cpp  Elftypes.cpp  Filetypes.cpp  Main.cpp  Parser.cpp  Pe32.cpp  Pe32types.cpp  Util.cpp
Tests/ELF/: elf.c  elf.cpp  makefile
Tests/PE/: makefile  pe.c  pe.cpp
include/: util.hpp
omega-zero/: CMakeLists.txt  elf.c  elf.h  filetypes.c  filetypes.h  flags.h  main.c  pe32.c  pe32.h  util.c  util.h  version.h
src/: elf.cpp  filetypes.cpp  main.cpp  parser.cpp  pe32.cpp  util.cpp
